@startuml
scale 600 width

VendingMachine -> Idle
Idle --> WaitingForMoney : Succeeded
Idle --> [*] : Aborted
WaitingForMoney --> DispensingSnack : Succeeded
WaitingForMoney --> [*] : Aborted
state WaitingForMoney {
  state "Payment has been made" as long1
  long1 : pass if payed
}
DispensingSnack --> Idle : Failed
DispensingSnack --> [*] : Succeeded
DispensingSnack --> [*] : Aborted
@enduml
